--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <meta name="author" content="Aayush Kumar Kumawat (Aayush259)" />
+    <meta name="description" content="Look up words, view their definitions, phonetics, and example sentences." />
+
     <title>Dictionary</title>
 
     <script type="text/javascript">
